# geoenv

./: .readthedocs.yml  CHANGELOG.md  README.md  classDiagram.uml  environment-min.yml  environment.yml  pyproject.toml  requirements.txt  sidebarlogo.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  test-real-requests.yml
docs/: sidebarintro.html  sidebarlogo.html
docs/source/: CHANGELOG.md  conf.py  index.rst
docs/source/_templates/: CHANGELOG.md  sidebarintro.html  sidebarlogo.html
docs/source/dev/: contributing.rst  design.rst  maintaining.rst
docs/source/user/: api.rst  quickstart.rst  support.rst
src/geoenv/: environment.py  geometry.py  resolver.py  response.py
src/geoenv/data_sources/: ecological_coastal_units.py  ecological_marine_units.py  world_terrestrial_ecosystems.py
tests/: conftest.py  test_environment.py  test_geoenv.py  test_geometry.py  test_mock_data.py  test_resolver.py  test_utilities.py
tests/data/: create_mock_data.py
tests/data_sources/: test_data_sources.py  test_ecological_coastal_units.py  test_ecological_marine_units.py  test_world_terrestrial_ecosystems.py
