[tool.poetry]
name = "geoenv"
version = "0.4.1"
description = "Map geometries to environmental semantics"
authors = ["Colin Smith <colin.smith@wisc.edu>"]
maintainers = ["Colin Smith <colin.smith@wisc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
geopandas = "^1.0.1"
daiquiri = "^3.3.0"
requests = "^2.32.3"
aiohttp = "^3.12.15"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
sphinx = "^9.1.0"
sphinx-autoapi = "^3.6.0"
myst-parser = "^5.0.0"
pylint = "^4.0.4"
black = "^26.1.0"
python-semantic-release = "^10.5.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^1.1.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"] # version location
branch = "main"                             # branch to make releases of
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-convert GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = false                   # patch release by default
allow_zero_version = true

[tool.semantic_release.changelog]
template_dir = "docs/source/_templates/"    # changelog template directory

[tool.pylint.'MESSAGES.CONTROL']
disable = "too-many-public-methods,c-extension-no-member"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
