[project]
name = "geoenv"
version = "0.4.1"
description = "Map geometries to environmental semantics"
authors = [{ name = "Colin Smith", email = "colin.smith@wisc.edu" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Colin Smith", email = "colin.smith@wisc.edu" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pandas>=2.2.3,<3",
    "geopandas>=1.0.1,<2",
    "daiquiri>=3.3.0,<4",
    "requests>=2.32.3,<3",
    "aiohttp>=3.12.15,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "sphinx>=9.1.0,<10",
    "sphinx-autoapi>=3.6.0,<4",
    "myst-parser>=5.0.0,<6",
    "python-semantic-release>=10.5.3,<11",
    "pytest-mock>=3.14.0,<4",
    "pytest-asyncio>=1.1.0,<2",
    "ruff>=0.15.3,<1.0.0",
]

[tool.uv]
default-groups = "all"

[tool.ruff.lint]
select = ["PL"]
ignore = ["PLR2004"]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"] # version location
branch = "main"                             # branch to make releases of
build_command = "uv build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-convert GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = false                   # patch release by default
allow_zero_version = true

[tool.semantic_release.changelog]
template_dir = "docs/source/_templates/"    # changelog template directory
